Fix to Issue 5.
http://code.google.com/p/iciql/issues/detail?id=5